dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr02.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  i = 'f'
end
